--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script>
     document.addEventListener("DOMContentLoaded", () => {
       // Fetch the shortcode content
-      fetch('content.json')
+      fetch('https://yosintv2.github.io/demo/content.json')
         .then(response => response.json())
         .then(data => {
           // Load content
