--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   
   <script>
     document.addEventListener("DOMContentLoaded", () => {
-      fetch('content.json')
+      fetch('https://yosintv2.github.io/demo/content.json')
         .then(response => response.json())
         .then(data => {
           // Load CSS
