--- a/index.html
+++ b/index.html
@@ -4,46 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Event Countdown</title>
-
-  <style>
-    /* own.css */
-.event {
-  border: 1px solid #4CAF50;
-  padding: 10px;
-  margin: 10px 0;
-  background-color: #f9f9f9;
-}
-
-.event-name {
-  font-size: 20px;
-  font-weight: bold;
-  color: #333;
-}
-
-.event-countdown {
-  font-size: 16px;
-  color: #f44336;
-  margin-top: 10px;
-}
-
-    /* own1.css */
-.event {
-  background-color: #e8f5e9;
-}
-
-.event-name {
-  color: #1b5e20;
-}
-
-    
-  </style>
-  
   <script>
     document.addEventListener("DOMContentLoaded", () => {
-      fetch('https://yosintv2.github.io/demo/content.json')
+      fetch('content.json')
         .then(response => response.json())
         .then(data => {
-          // Load CSS
+          // Load external CSS
           if (data.css && Array.isArray(data.css)) {
             data.css.forEach(cssLink => {
               const link = document.createElement('link');
@@ -53,7 +19,7 @@
             });
           }
 
-          // Load JS
+          // Load external JS
           if (data.js && Array.isArray(data.js)) {
             data.js.forEach(jsLink => {
               const script = document.createElement('script');
@@ -71,8 +37,44 @@
             eventsContainer.appendChild(eventElement);
           });
 
+          // Initialize countdown for each event
+          initializeCountdown();
         })
         .catch(error => console.error('Error loading content:', error));
+
+      function initializeCountdown() {
+        const events = document.querySelectorAll('.event');
+        events.forEach(event => {
+          const startTime = new Date(event.getAttribute('data-start'));
+          const durationHours = parseFloat(event.getAttribute('data-duration'));
+          const endTime = new Date(startTime.getTime() + durationHours * 60 * 60 * 1000);
+          const countdownElement = event.querySelector('.event-countdown');
+
+          const updateCountdown = () => {
+            const now = new Date();
+            if (now < startTime) {
+              countdownElement.textContent = `Starts in ${Math.ceil((startTime - now) / 1000)} seconds`;
+            } else if (now < endTime) {
+              countdownElement.textContent = `Ends in ${Math.ceil((endTime - now) / 1000)} seconds`;
+            } else {
+              countdownElement.textContent = "Event ended";
+            }
+          };
+
+          setInterval(updateCountdown, 1000);
+          updateCountdown();
+          
+          // Make event name clickable and redirect to the link
+          const eventName = event.querySelector('.event-name');
+          const link = event.getAttribute('data-link');
+          if (link && eventName) {
+            eventName.style.cursor = 'pointer';
+            eventName.addEventListener('click', () => {
+              window.open(link, '_blank');
+            });
+          }
+        });
+      }
     });
   </script>
 </head>
