--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
 
 
 
-
+<div class="container mt-4 seo-content">
 <div id="live-container"></div>
-  <script src="app.js"></script>
-
+<script src="app.js"></script>
+</div>
   
 
 <center>
