--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
 
 
-<div class="container mt-4 seo-content">
+<div class="row">  
 <div id="live-container"></div>
 <script src="app.js"></script>
 </div>
