--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -94,7 +93,7 @@
 
 
 
-<div class="card-body">
+<div class="container mt-4" style="background-color: transparent; color: inherit;">
 <div id="live-container"></div>
 <script src="app.js"></script>
 </div>
