--- a/index.html
+++ b/index.html
@@ -1,43 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Discover Kaomojis, a collection of fun and expressive text-based emoticons perfect for conversations and social media. Copy and share your favorite emojis easily!">
-    <meta name="keywords" content="Kaomojis, emoji art, text emoticons, smileys, copy emojis, fun emojis, creative text art, cute emojis">
-    <meta property="og:title" content="Kaomojis - Creative Text Emojis | GetEmoji.Online">
-    <meta property="og:description" content="Discover a fun collection of Kaomojis, text-based emoticons, and creative expressions. Easily copy and share your favorite emojis!">
-    <meta property="og:image" content="https://www.getemoji.online/image1.jpg">
-    <meta property="og:url" content="http://www.getemoji.online/">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Kaomojis - Creative Text Emojis | GetEmoji.Online">
-    <meta name="twitter:description" content="Explore a wide range of Kaomojis for fun conversations, memes, and social media posts. Copy your favorite emojis with a click!">
-    <meta name="twitter:image" content="https://www.getemoji.online/image1.jpg">
-    <meta name="robots" content="index, follow">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- Search Engine Optimization by Rank Math - https://rankmath.com/ -->
+<title>YoSinTV - Cricket | Football | Playing XI | Match Preview</title>
+<meta name="description" content="YoSinTV is sports website that covers all the Cricket Matches, World Cup, International/Domestic Matches, Football Matches, etc."/>
+<meta name="robots" content="follow, index"/>
+<link rel="canonical" href="https://www.yosin-tv.net/" />
+<link rel="next" href="https://www.yosin-tv.net/page/2/" />
+<meta property="og:locale" content="en_US" />
+<meta property="og:type" content="website" />
+<meta property="og:title" content="YoSinTV - Cricket | Football | Playing XI | Match Preview" />
+<meta property="og:description" content="YoSinTV is sports website that covers all the Cricket Matches, World Cup, International/Domestic Matches, Football Matches, etc." />
+<meta property="og:url" content="https://www.yosin-tv.net/" />
+<meta property="og:site_name" content="YoSinTV" />
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="YoSinTV - Cricket | Football | Playing XI | Match Preview" />
+<meta name="twitter:description" content="YoSinTV is sports website that covers all the Cricket Matches, World Cup, International/Domestic Matches, Football Matches, etc." />
 
-    <style>
+<style>
     .livee { display: flex; justify-content: space-between; align-items: center; text-decoration: none; color: inherit; margin: 5px 0; padding: 5px; border: 2px solid #000; border-radius: 5px; cursor: pointer; transition: box-shadow 0.3s ease; background-color: red; color: white; }
     .livee:hover { box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); }
     .livee-name { flex: 2; text-align: center; color: white; font-weight: bold; }
   </style>
 
   
-    <!-- Schema.org markup for Google+ -->
-    <script type="application/ld+json">
-        {
-            "@context": "http://schema.org",
-            "@type": "WebPage",
-            "name": "Kaomoji | GetEmoji.Online",
-            "description": "Discover Kaomojis, a collection of fun and expressive text-based emoticons perfect for conversations and social media. Copy and share your favorite emojis easily!",
-            "url": "http://www.getemoji.online/",
-            "image": "https://www.getemoji.online/feature.png",
-            "publisher": {
-                "@type": "Organization",
-                "name": "GetEmoji.Online"
-            },
-            "mainEntityOfPage": "http://www.getemoji.online/"
-        }
-    </script>
+
 
     <title>Kaomojis - Creative Text Emojis | GetEmoji.Online </title>
 
@@ -61,19 +50,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" href="/positive/">Positive</a>
+                    <a class="nav-link active" href="/positive/">Cricket</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="/negative/">Negative</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link " href="/neutral/">Neutral</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link " href="/various/">Various</a>
-                </li>
-                 <li class="nav-item">
-                    <a class="nav-link " href="/animals/">Animals</a>
+                    <a class="nav-link " href="/negative/">Football</a>
                 </li>
                  <li class="nav-item">
                     <a class="nav-link " href="/others/">Others</a>
@@ -88,7 +68,7 @@
     <!-- Header Section -->
     <header class="header">
         <h1>Welcome to YoSinTV Live Stream</h1>
-        <p>Your ultimate destination for Kaomojis, fun expressions, and creative text art!</p>
+        <p>Your ultimate destination for Live Match, Analysis & Free Live Stream </p>
     </header>
 
 
