--- a/index.html
+++ b/index.html
@@ -23,6 +23,42 @@
     .livee { display: flex; justify-content: space-between; align-items: center; text-decoration: none; color: inherit; margin: 5px 0; padding: 5px; border: 2px solid #000; border-radius: 5px; cursor: pointer; transition: box-shadow 0.3s ease; background-color: red; color: white; }
     .livee:hover { box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); }
     .livee-name { flex: 2; text-align: center; color: white; font-weight: bold; }
+
+
+    /* ######Button CSS#######*/ 
+input.MyButton { width: 200px; padding: 7px; cursor: pointer; font-weight: bold; font-size: 100%; background: #0a0647; color: #fff; border: 1px solid #0a0647; border-radius: 10px; } input.MyButton:hover { color: #ff0000; background: #000; border: 1px solid #fff; }
+	
+    .container {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    .post-share {
+      background-color: rgba(204, 203, 200, 0.7); /* Transparent white-gray */
+      padding: 7px;
+      border-radius: 3px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+      width: 100%;
+      max-width: 98%;
+      box-sizing: border-box;
+    }
+    .post-share b, .post-share i {
+      font-family: Arial, sans-serif;
+      font-size: 13px;
+    }
+    .post-share .content {
+      text-align: left;
+      list-style-type: disc;
+      padding-left: 20px;
+    }
+    .post-share .content li {
+      margin-bottom: 10px;
+    }
+	
+	
+</style>
   </style>
 
   
@@ -72,6 +108,17 @@
     </header>
 
 
+
+<div>Watch the live match in HD Quality, Scroll down, check out every links for Smooth Live Stream of This Match. 
+Stay tuned with YoSinTV to watch every live match with us !! </div>
+<br/>
+
+<div>
+Predicted lineups are available for the match a few days in advance while the actual lineup will be available about an hour ahead of the match.
+</div>
+
+
+    
 <center>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5525538810839147"
      crossorigin="anonymous"></script>
@@ -86,6 +133,21 @@
 </script>
 </center>
 
+
+<div class="post-share text-center m-1">
+<div style="text-align: center;">
+👉<b style="font-family: arial; font-size: 13px;">The match links are activated 15 minutes before kickoff.
+</b></div>
+<div style="text-align: center;">
+👉<b style="font-family: arial; font-size: 13px;">Go to below links to get matches. If the first link doesn’t work, go for the second or third link.
+</b></div></div>
+
+
+<div style="text-align: center;"><form>
+<input style="text-align: center;" class="MyButton" 
+onclick="window.location.href='https://yosintv2.github.io/tv/ads.html'" type="button" value="Refresh Live Links"/>
+</form></div><br/>
+<!-------- Link Starts----->
 
     
 <div class="container mt-4" style="background-color: transparent; color: inherit;">
