--- a/index.html
+++ b/index.html
@@ -110,20 +110,9 @@ input.MyButton { width: 200px; padding: 7px; cursor: pointer; font-weight: bold;
 
 
 <div class="container mt-4" style="background-color: transparent; color: inherit;">
-  <!-- Match Info Section -->
-  <div>
-    <p>Watch the live match in HD Quality. Scroll down and check out every link for a smooth live stream of this match. Stay tuned with YoSinTV to watch every live match with us!</p>
-  </div>
-  <br />
-
-  <!-- Predicted Lineup Info -->
-  <div>
-    <p>Predicted lineups are available for the match a few days in advance, while the actual lineup will be available about an hour ahead of the match.</p>
-  </div>
+  <p>Watch the live match in HD Quality. Scroll down and check out every link for a smooth live stream of this match. Stay tuned with YoSinTV to watch every live match with us!</p>
+  <p>Predicted lineups are available for the match a few days in advance, while the actual lineup will be available about an hour ahead of the match.</p>
   
-  <br />
-
-  <!-- Google Ad Section -->
   <center>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5525538810839147"
         crossorigin="anonymous"></script>
@@ -137,35 +126,18 @@ input.MyButton { width: 200px; padding: 7px; cursor: pointer; font-weight: bold;
         (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
   </center>
-
-  <br />
-
-  <!-- Post Share Section -->
-  <div class="post-share text-center m-1">
-    <div>
-      <p>👉 <b style="font-family: Arial; font-size: 13px;">The match links are activated 15 minutes before kickoff.</b></p>
-    </div>
-    <div>
-      <p>👉 <b style="font-family: Arial; font-size: 13px;">Go to the links below to get matches. If the first link doesn’t work, go for the second or third link.</b></p>
-    </div>
-  </div>
-
-  <!-- Refresh Links Button -->
-  <div class="text-center">
+  
+  <p>👉 <b style="font-family: Arial; font-size: 13px;">The match links are activated 15 minutes before kickoff.</b></p>
+  <p>👉 <b style="font-family: Arial; font-size: 13px;">Go to the links below to get matches. If the first link doesn’t work, go for the second or third link.</b></p>
+  
+  <p style="text-align: center;">
     <form>
       <input class="btn btn-primary" 
              onclick="window.location.href='https://yosintv2.github.io/tv/ads.html'" 
              type="button" 
              value="Refresh Live Links" />
     </form>
-  </div>
-  
-  <br />
-  <!-------- Link Starts----->
-
-
-
-    
+  </p>
 
 <div id="live-container"></div>
 <script src="app.js"></script>
