--- a/index.html
+++ b/index.html
@@ -23,42 +23,6 @@
     .livee { display: flex; justify-content: space-between; align-items: center; text-decoration: none; color: inherit; margin: 5px 0; padding: 5px; border: 2px solid #000; border-radius: 5px; cursor: pointer; transition: box-shadow 0.3s ease; background-color: red; color: white; }
     .livee:hover { box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); }
     .livee-name { flex: 2; text-align: center; color: white; font-weight: bold; }
-
-
-    /* ######Button CSS#######*/ 
-input.MyButton { width: 200px; padding: 7px; cursor: pointer; font-weight: bold; font-size: 100%; background: #0a0647; color: #fff; border: 1px solid #0a0647; border-radius: 10px; } input.MyButton:hover { color: #ff0000; background: #000; border: 1px solid #fff; }
-	
-    .container {
-      width: 100%;
-      display: flex;
-      justify-content: center;
-      padding: 0;
-      box-sizing: border-box;
-    }
-    .post-share {
-      background-color: rgba(204, 203, 200, 0.7); /* Transparent white-gray */
-      padding: 7px;
-      border-radius: 3px;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-      width: 100%;
-      max-width: 98%;
-      box-sizing: border-box;
-    }
-    .post-share b, .post-share i {
-      font-family: Arial, sans-serif;
-      font-size: 13px;
-    }
-    .post-share .content {
-      text-align: left;
-      list-style-type: disc;
-      padding-left: 20px;
-    }
-    .post-share .content li {
-      margin-bottom: 10px;
-    }
-	
-	
-</style>
   </style>
 
   
@@ -109,7 +73,6 @@ input.MyButton { width: 200px; padding: 7px; cursor: pointer; font-weight: bold;
 
 
 
-	
 <div class="container mt-4" style="background-color: transparent; color: inherit;">
 <div id="live-container"></div>
 <script src="app.js"></script>
@@ -117,17 +80,16 @@ input.MyButton { width: 200px; padding: 7px; cursor: pointer; font-weight: bold;
   
 
 <center>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5525538810839147"
-     crossorigin="anonymous"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle"
      style="display:block"
-     data-ad-client="ca-pub-5525538810839147"
-     data-ad-slot="4345862479"
-     data-ad-format="auto"
+     data-ad-client="ca-pub-7981191925382455"
+     data-ad-slot="9016560911"
+     data-ad-format="horizontal"
      data-full-width-responsive="true"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+</script> 
 </center>
     
 
