--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- Search Engine Optimization by Rank Math - https://rankmath.com/ -->
 <title>YoSinTV - Cricket | Football | Playing XI | Match Preview</title>
 <meta name="description" content="YoSinTV is sports website that covers all the Cricket Matches, World Cup, International/Domestic Matches, Football Matches, etc."/>
 <meta name="robots" content="follow, index"/>
@@ -25,10 +24,6 @@
     .livee-name { flex: 2; text-align: center; color: white; font-weight: bold; }
   </style>
 
-  
-
-
-    <title>Kaomojis - Creative Text Emojis | GetEmoji.Online </title>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -72,7 +67,22 @@
     </header>
 
 
+<center>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5525538810839147"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-5525538810839147"
+     data-ad-slot="4345862479"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</center>
 
+
+    
 <div class="container mt-4" style="background-color: transparent; color: inherit;">
 <div id="live-container"></div>
 <script src="app.js"></script>
@@ -80,16 +90,17 @@
   
 
 <center>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5525538810839147"
+     crossorigin="anonymous"></script>
 <ins class="adsbygoogle"
      style="display:block"
-     data-ad-client="ca-pub-7981191925382455"
-     data-ad-slot="9016560911"
-     data-ad-format="horizontal"
+     data-ad-client="ca-pub-5525538810839147"
+     data-ad-slot="4345862479"
+     data-ad-format="auto"
      data-full-width-responsive="true"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
-</script> 
+</script>
 </center>
     
 
