--- a/index.html
+++ b/index.html
@@ -65,6 +65,25 @@
     </header>
 
 
+    <div class="container mt-4 seo-content">
+    <h2 class="text-center mb-4"> </h2>
+    <p>Watch the live match of TeamName in HD Quality, Scroll down, check out every links for Smooth Live Stream of TeamName. 
+Stay tuned with us to watch every live match with us !!.</p>
+
+    <p>Predicted lineups are available for the match a few days in advance while the actual lineup will be available about an hour ahead of the match.
+.</p>
+
+
+    <ul>
+        <li> The match links are activated 15 minutes before kickoff. </li>
+        <li>Go to below links to get matches. </li>
+        <li>If the first link doesn’t work, go for the second or third link.</li>
+
+    </ul>
+    
+</div>
+
+    
 <center>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5525538810839147"
      crossorigin="anonymous"></script>
