--- a/index.html
+++ b/index.html
@@ -37,20 +37,20 @@
 <!-- Updated Navbar Section (Dark Themed) -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="https://www.getemoji.online/">YoSinTV</a>
+        <a class="navbar-brand" href="https://www.yosin-tv.net/">YoSinTV</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" href="/positive/">Cricket</a>
+                    <a class="nav-link active" href="#">Cricket</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="/negative/">Football</a>
+                    <a class="nav-link " href="#">Football</a>
                 </li>
                  <li class="nav-item">
-                    <a class="nav-link " href="/others/">Others</a>
+                    <a class="nav-link " href="#">Others</a>
                 </li>
             </ul>
         </div>
@@ -62,7 +62,7 @@
     <!-- Header Section -->
     <header class="header">
         <h1>Welcome to YoSinTV Live Stream</h1>
-        <p>Your ultimate destination for Live Match, Analysis & Free Live Stream </p>
+        <p>Your Ultimate destination for Free Live Stream </p>
     </header>
 
 
