--- a/index.html
+++ b/index.html
@@ -146,39 +146,28 @@ onclick="window.location.href='https://yosintv2.github.io/tv/ads.html'" type="bu
 
 <!-- SEO Content Section -->
 <div class="container mt-4 seo-content">
-    <h2 class="text-center mb-4">What Are Kaomojis?</h2>
-    <p>Kaomojis are text-based emoticons that originated in Japan, designed to express emotions, reactions, and playful gestures using keyboard characters. The term "Kaomoji" is derived from the Japanese words "kao" (face) and "moji" (character), highlighting their focus on facial expressions. Unlike traditional emojis, Kaomojis are created entirely with text, offering unmatched versatility and universal compatibility. What makes them special? They allow you to creatively add emotions to your messages without relying on graphic images.</p>
+    <h2 class="text-center mb-4"> What is YoSinTV ?</h2>
+    <p>YoSinTV is sports website that covers all the Cricket Matches, World Cup, International/Domestic Matches, Football Matches, etc.</p>
 
-    <h3>Why Are Kaomojis So Popular?</h3>
-    <p>Why do Kaomojis captivate users worldwide? These text-based emoticons have gained popularity for their simplicity, creativity, and ability to convey complex emotions in a fun and personal way. They work seamlessly across devices and platforms, making them accessible to everyone. Whether you're expressing joy, love, humor, or sympathy, Kaomojis provide a unique way to enhance your digital communication. How do Kaomojis make conversations more engaging? By adding personality and charm, they help you connect with others on a deeper level.</p>
+    <h3>How Does YoSin TV Work??</h3>
+    <p>Yosin TV Work gives you full access, where you will find a comprehensive Dashboard showing ongoing tournaments and matches for all teams. For example, if there’s a match between two teams, you’ll see a ‘Live Now’ button next to the match details.  Clicking on it will take you to a live stream of the match. The schedule for upcoming matches, whether today or tomorrow, is conveniently provided. Yosin TV’s platform is user-friendly, simple, and clean, making navigation easy. Enjoy a variety of live streams in cricket, football, soccer, and other sections.</p>
 
-    <h3>What Are Some Popular Kaomojis?</h3>
-    <p>Here are some widely loved Kaomojis categorized by their emotional themes:</p>
-    <ul>
-        <li>Happiness: (＾▽＾) / (✿◠‿◠)</li>
-        <li>Love: (｡♥‿♥｡) / (♡˙︶˙♡)</li>
-        <li>Excitement: (ノ^_^)ノ / (ノ◕ヮ◕)ノ*:･ﾟ✧</li>
-        <li>Sadness: (´；ω；`) / (ಥ﹏ಥ)</li>
-        <li>Playfulness: (¬‿¬) / ( ͡° ͜ʖ ͡°)</li>
-    </ul>
-    <p>Whether you're feeling cheerful, romantic, or mischievous, there's a Kaomoji for every moment. What makes them even better? You can customize them to suit your style!</p>
+   
+    <h3>How to watch live-streaming matches on YoSin TV??</h3>
+    <p>To watch live matches on Yosin TV, find the sport and match you want and click the link to access the live stream.</p>
 
-    <h3>How to Copy and Share Kaomojis?</h3>
-    <p>On our website, you can easily copy your favorite Kaomojis by clicking the "Copy" button next to each one. Simply paste them into your social media posts, text messages, or emails to add some flair to your conversations! It’s that simple to bring more personality and fun to your digital interactions.</p>
+    <h3>Is Yosin TV Free?</h3>
+    <p>Yosin TV itself is free to access, but some live streams may only be available on paid tiers or subscriptions, Yosin TV’s platform is user-friendly, simple, and clean, making navigation easy. Enjoy a variety of live streams in cricket, football, soccer, and other sections.
 
-    <h3>Where Can You Find Kaomojis?</h3>
-    <p>Where can you find the best collection of Kaomojis? Our website provides a wide variety of creative and expressive Kaomojis for every mood and occasion. From joyful expressions to heartfelt gestures, you'll find exactly what you need to personalize your messages. Simply browse our extensive collection, copy your favorite Kaomojis, and paste them into your chats, emails, or social media posts. Why go anywhere else? Explore our platform today and bring more emotion and creativity to your digital conversations!</p>
-
-    <h3>Explore Our Kaomoji Collection</h3>
-    <p>Explore our full collection and discover more fun and expressive Kaomojis that will bring your online conversations to life! Whether you’re looking for a cute face to brighten someone’s day or a quirky character to make your message stand out, we’ve got something for everyone!</p>
+</p>
 
     <!-- Add Images -->
     <div class="row">
         <div class="col-md-6">
-            <img src="https://www.getemoji.online/image1.jpg" alt="Kaomojis Collection" class="img-fluid">
+            <img src="https://yosintv2.github.io/tv/yosintv.png" alt="Kaomojis Collection" class="img-fluid">
         </div>
         <div class="col-md-6">
-            <img src="https://www.getemoji.online/image2.jpg" alt="Fun Kaomojis in Action" class="img-fluid">
+            <img src="https://yosintv2.github.io/tv/yosintv.png" alt="Fun Kaomojis in Action" class="img-fluid">
         </div>
     </div>
 </div>
