--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ onclick="window.location.href='https://yosintv2.github.io/tv/ads.html'" type="bu
 
 <!-- SEO Content Section -->
 <div class="container mt-4 seo-content">
-    <h2 class="text-center mb-4"> What is YoSinTV ?</h2>
+    <h2> What is YoSinTV ?</h2>
     <p>YoSinTV is sports website that covers all the Cricket Matches, World Cup, International/Domestic Matches, Football Matches, etc.</p>
 
     <h3>How Does YoSin TV Work??</h3>
