--- a/index.html
+++ b/index.html
@@ -179,10 +179,10 @@ onclick="window.location.href='https://yosintv2.github.io/tv/ads.html'" type="bu
     <!-- Add Images -->
     <div class="row">
         <div class="col-md-6">
-            <img src="https://yosintv2.github.io/tv/yosintv.png" alt="Kaomojis Collection" class="img-fluid">
+            <img src="/zzz/feature.png" alt="YoSinTV Football Live Stream" class="img-fluid">
         </div>
         <div class="col-md-6">
-            <img src="https://yosintv2.github.io/tv/yosintv.png" alt="Fun Kaomojis in Action" class="img-fluid">
+            <img src="/zzz/feature1.png" alt="YoSinTV Cricket Live Stream" class="img-fluid">
         </div>
     </div>
 </div>
@@ -243,7 +243,9 @@ onclick="window.location.href='https://yosintv2.github.io/tv/ads.html'" type="bu
 
 
 <!-- BEGIN: Powered by Supercounters.com -->
-<center><script type="text/javascript" src="//widget.supercounters.com/ssl/online_i.js"></script><script type="text/javascript">sc_online_i(1703046,"ffffff","e61c1c");</script><br><noscript><a href="https://www.supercounters.com/">free online counter</a></noscript>
+<center><script type="text/javascript" src="//widget.supercounters.com/ssl/online_i.js"></script>
+<script type="text/javascript">sc_online_i(1703301,"ffffff","e61c1c");</script><br><noscript>
+<a href="https://www.supercounters.com/">free online counter</a></noscript>
 </center>
 <!-- END: Powered by Supercounters.com -->
 
