--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="YoSinTV is sports website that covers all the Cricket Matches, World Cup, International/Domestic Matches, Football Matches, etc."/>
-<meta name="robots" content="follow, index"/>
-<link rel="canonical" href="https://www.yosin-tv.net/" />
-<link rel="next" href="https://www.yosin-tv.net/page/2/" />
+<!-- <meta name="robots" content="follow, index"/> -->
 <meta property="og:locale" content="en_US" />
 <meta property="og:type" content="website" />
 <meta property="og:title" content="YoSinTV - Cricket | Football | Playing XI | Match Preview" />
