--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ onclick="window.location.href='https://yosintv2.github.io/tv/ads.html'" type="bu
 
 <!-- Footer Section -->
 <footer>
-    <p>&copy; 2024 Kaomoji | GetEmoji.Online - All rights reserved.</p>
+    <p>&copy; 2024 YoSinTV </p>
     <p>
         <a href="/page/about.html">About Us</a> | 
         <a href="/page/contact.html">Contact</a> | 
