--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     
     <!-- Header Section -->
     <header class="header">
-        <h1>Welcome to YoSinTV Live Stream</h1>
+        <h1><b>YoSinTV Live Stream</b></h1>
         <p>Your Ultimate destination for Free Live Stream </p>
 
         <p bis_skin_checked='1' class='notice' id='notice' style='background: rgb(244 17 17); border-radius: 0px; border: 0.01pc solid rgb(0, 52, 70); box-sizing: border-box; color: #003446; font-family: Raleway, Arial, sans-serif; font-size: 1pc; list-style: none; margin: 0.275pc; outline: none; overflow: hidden; padding: 0.2pc; text-align: center; vertical-align: baseline;'><b style='background: 0px 0px; border: 0px; box-sizing: border-box; list-style: none; margin: 0px; outline: none; padding: 0px; vertical-align: baseline;'><a style='background: 0px 0px; border: 0px; box-sizing: border-box; color: white; margin: 0px; outline: none; padding: 0px; text-decoration-line: none; transition: all 0s ease 0s; vertical-align: baseline;' target=''>
@@ -221,23 +221,24 @@ onclick="window.location.href='https://yosintv2.github.io/tv/ads.html'" type="bu
 </footer>
 
 
-    
-    <!-- Copy Function Script -->
-    <script>
-        function copyEmoji(emoji, button) {
-            const tempInput = document.createElement("input");
-            document.body.appendChild(tempInput);
-            tempInput.value = emoji;
-            tempInput.select();
-            document.execCommand("copy");
-            document.body.removeChild(tempInput);
-            const alert = button.nextElementSibling;
-            alert.style.display = "block";
-            setTimeout(() => {
-                alert.style.display = "none";
-            }, 1000);
-        }
-    </script>
+<!-- Sticky Footer Ads-->
+<script type='text/javascript'>
+$(document).ready(function() {$('img#closed').click(function(){$('#bl_banner').hide(90);});});
+</script>
+<div id='fixedban' style='width:100%;margin:auto;text-align:center;float:none;overflow:hidden;display:scroll;position:fixed;bottom:0;z-index:999;-webkit-transform:translateZ(0);'>
+<div>
+<a id='close-fixedban' onclick='document.getElementById("fixedban").style.display = "none";' style='cursor:pointer;'><img alt='close' src=' https://yosintv2.github.io/bkp/close.gif ' style='vertical-align:middle;' title='close button'/></a>
+</div>
+<div style='text-align:center;display:block;max-width:300px;height:auto;overflow:hidden;margin:auto'>
+
+
+<ins class='adsbygoogle' data-ad-client='ca-pub-5525538810839147' data-ad-slot='5912194004' style='display:inline-block;width:300px;height:250px'></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+
+   
 
 
 <!-- BEGIN: Powered by Supercounters.com -->
