--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ Scroll Down &amp; Select Links !!  </a></b></p>
 <center>
 <form>
 <input style="text-align: center;" class="MyButton" 
-onclick="window.location.href='https://yosintv2.github.io/tv/ads.html'" type="button" value="Refresh Links"/>
+onclick="window.location.href='https://yosintv2.github.io/tv/ads.html'" type="button" value="Refresh Live Links"/>
 </form>
 </center>
 
