--- a/index.html
+++ b/index.html
@@ -190,16 +190,17 @@ onclick="window.location.href='https://yosintv2.github.io/tv/ads.html'" type="bu
 
 
 <center>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5525538810839147"
+     crossorigin="anonymous"></script>
 <ins class="adsbygoogle"
      style="display:block"
-     data-ad-client="ca-pub-7981191925382455"
-     data-ad-slot="9016560911"
-     data-ad-format="horizontal"
+     data-ad-client="ca-pub-5525538810839147"
+     data-ad-slot="4345862479"
+     data-ad-format="auto"
      data-full-width-responsive="true"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
-</script> 
+</script>
 </center>
 
     
