--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ onclick="window.location.href='https://yosintv2.github.io/tv/ads.html'" type="bu
     
 <!-- BEGIN: Powered by Supercounters.com -->
 <center><script type="text/javascript" src="//widget.supercounters.com/ssl/online_i.js"></script>
-<script type="text/javascript">sc_online_i(1703301,"ffffff","e61c1c");</script><br><noscript>
+<script type="text/javascript">sc_online_i(1703301,"343a40","343a40");</script><br><noscript>
 <a href="https://www.supercounters.com/">free online counter</a></noscript>
 </center>
 <!-- END: Powered by Supercounters.com -->
