--- a/index.html
+++ b/index.html
@@ -33,9 +33,13 @@
 
 
 <!-- Updated Navbar Section (Dark Themed) -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-light" style="background-color: #cfd4d0;">
     <div class="container-fluid">
-        <a class="navbar-brand" href="https://www.yosin-tv.net/">YoSinTV</a>
+        
+          <a class="navbar-brand" href="https://www.yosin-tv.net/">
+    <img src="https://yosintv2.github.io/tv/yosintv1.png" width="120" height="40" class="d-inline-block align-top" alt=""></a>
+  
+  
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
