--- a/index.html
+++ b/index.html
@@ -166,15 +166,15 @@ onclick="window.location.href='https://yosintv2.github.io/tv/ads.html'" type="bu
     <h2> What is YoSinTV ?</h2>
     <p>YoSinTV is sports website that covers all the Cricket Matches, World Cup, International/Domestic Matches, Football Matches, etc.</p>
 
-    <h3>How Does YoSin TV Work??</h3>
-    <p>Yosin TV Work gives you full access, where you will find a comprehensive Dashboard showing ongoing tournaments and matches for all teams. For example, if there’s a match between two teams, you’ll see a ‘Live Now’ button next to the match details.  Clicking on it will take you to a live stream of the match. The schedule for upcoming matches, whether today or tomorrow, is conveniently provided. Yosin TV’s platform is user-friendly, simple, and clean, making navigation easy. Enjoy a variety of live streams in cricket, football, soccer, and other sections.</p>
+    <h3>How Does YoSinTV Work??</h3>
+    <p>YoSinTV Work gives you full access, where you will find a comprehensive Dashboard showing ongoing tournaments and matches for all teams. For example, if there’s a match between two teams, you’ll see a ‘Live Now’ button next to the match details.  Clicking on it will take you to a live stream of the match. The schedule for upcoming matches, whether today or tomorrow, is conveniently provided. Yosin TV’s platform is user-friendly, simple, and clean, making navigation easy. Enjoy a variety of live streams in cricket, football, soccer, and other sections.</p>
 
    
-    <h3>How to watch live-streaming matches on YoSin TV??</h3>
-    <p>To watch live matches on Yosin TV, find the sport and match you want and click the link to access the live stream.</p>
+    <h3>How to watch live-streaming matches on YoSinTV??</h3>
+    <p>To watch live matches on YoSinTV, find the sport and match you want and click the link to access the live stream.</p>
 
-    <h3>Is Yosin TV Free?</h3>
-    <p>Yosin TV itself is free to access, but some live streams may only be available on paid tiers or subscriptions, Yosin TV’s platform is user-friendly, simple, and clean, making navigation easy. Enjoy a variety of live streams in cricket, football, soccer, and other sections.
+    <h3>Is YoSinTV Free?</h3>
+    <p>YoSinTV itself is free to access, but some live streams may only be available on paid tiers or subscriptions, YoSinTV’s platform is user-friendly, simple, and clean, making navigation easy. Enjoy a variety of live streams in cricket, football, soccer, and other sections.
 
 </p>
 
