--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@ Scroll Down &amp; Select Links !!  </a></b></p>
     
 
 
-    <div class="container mt-4 seo-content">
-    <p>Watch the live of this match in HD Quality, Scroll down to check out every links for Smooth Live Stream of this match.</p>
+<div class="container mt-4 seo-content">
+<p>Watch the live of this match in HD Quality, Scroll down to check out every links for Smooth Live Stream of this match.</p>
 
-    <p>Predicted lineups are available for the match a few days in advance while the actual lineup will be available about an hour ahead of the match. </p>
+<p>Predicted lineups are available for the match a few days in advance while the actual lineup will be available about an hour ahead of the match. </p>
 
 <center>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -108,9 +108,9 @@ Scroll Down &amp; Select Links !!  </a></b></p>
 
         
 <ul>
-<li> 👉 <i>The match links are activated 15 minutes before kickoff. </i></li>
-<li> 👉 <i>Go to below links to get matches. </i></li>
-<li> 👉 <i>If the first link doesn’t work, go for the second or third link. </i></li>
+<li> 👉 <i><b> The match links are activated 15 minutes before kickoff. </b></i></li>
+<li> 👉 <i><b> Go to below links to get matches. </b></i></li>
+<li> 👉 <i><b> If the first link doesn’t work, go for the second or third link. </b></i></li>
 </ul> 
 </div>
 
