--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 
 
 <!-- Updated Navbar Section (Dark Themed) -->
-<nav class="navbar navbar-light" style="background-color: #cfd4d0;">
+<div class="container">
+<nav class="navbar navbar-light" style="background-color: #e7e9eb;">
     <div class="container-fluid">
         
           <a class="navbar-brand" href="https://www.yosin-tv.net/">
@@ -43,6 +44,7 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
+        
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
@@ -240,6 +242,7 @@ onclick="window.location.href='https://yosintv2.github.io/tv/ads.html'" type="bu
 </footer>
 
 
+</div>
 <!-- Sticky Footer Ads-->
 <script type='text/javascript'>
 $(document).ready(function() {$('img#closed').click(function(){$('#bl_banner').hide(90);});});
