--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
     .livee:hover { box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); }
     .livee-name { flex: 2; text-align: center; color: white; font-weight: bold; }
     input.MyButton { width: 200px; padding: 7px; cursor: pointer; font-weight: bold; font-size: 100%; background: #0a0647; color: #fff; border: 1px solid #0a0647; border-radius: 10px; } input.MyButton:hover { color: #ff0000; background: #000; border: 1px solid #fff; }
-  </style>
+</style>
 
 
     <!-- Bootstrap CSS -->
+    <link rel="shortcut icon" href="https://cdn.bio.link/uploads/profile_pictures/2024-06-12/cITldnIcB9Nq7SSUDcZegs3lRiCxS1vJ.png" type="image/webp">
+    <link rel="icon" href="https://cdn.bio.link/uploads/profile_pictures/2024-06-12/cITldnIcB9Nq7SSUDcZegs3lRiCxS1vJ.png" type="image/webp">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://www.getemoji.online/stylee.css" rel="stylesheet">
     <title>YoSinTV - Cricket | Football | Playing XI | Match Preview</title>
@@ -48,13 +50,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">Cricket</a>
+                    <a class="nav-link active" href="https://www.yosin-tv.net/">Cricket</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="#">Football</a>
+                    <a class="nav-link " href="https://www.yosin-tv.net/">Football</a>
                 </li>
                  <li class="nav-item">
-                    <a class="nav-link " href="#">Others</a>
+                    <a class="nav-link " href="https://www.yosin-tv.net/">Others</a>
                 </li>
             </ul>
         </div>
