--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
 
     <!-- Bootstrap CSS -->
-    <link rel="shortcut icon" href="https://cdn.bio.link/uploads/profile_pictures/2024-06-12/cITldnIcB9Nq7SSUDcZegs3lRiCxS1vJ.png" type="image/webp">
-    <link rel="icon" href="https://cdn.bio.link/uploads/profile_pictures/2024-06-12/cITldnIcB9Nq7SSUDcZegs3lRiCxS1vJ.png" type="image/webp">
+    <link rel="shortcut icon" href="/favicon.png" type="image/webp">
+    <link rel="icon" href="/favicon.png" type="image/webp">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://www.getemoji.online/stylee.css" rel="stylesheet">
     <title>YoSinTV - Cricket | Football | Playing XI | Match Preview</title>
