--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@ $(document).ready(function() {$('img#closed').click(function(){$('#bl_banner').h
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+<script src='https://cdn.jsdelivr.net/gh/yosintv2/bkp/player.js'/>
 
 
 
