--- a/edit.html
+++ b/edit.html
@@ -51,7 +51,7 @@
 
   <div class="links">
     <p> English Premier League</p>
-    <a href="#tool1"> Man city</a>
+    <a href="https://github.com/yosintv2/livee/edit/main/mancity"> Man city</a>
     <a href="#tool2">Tool 2</a>
     <a href="#tool3">Tool 3</a>
     <a href="#tool4">Tool 4</a>
