--- a/edit.html
+++ b/edit.html
@@ -52,52 +52,50 @@
   <div class="links">
     <p> English Premier League</p>
     <a href="https://github.com/yosintv2/livee/edit/main/mancity"> Man city</a>
-    <a href="#tool2">Tool 2</a>
-    <a href="#tool3">Tool 3</a>
-    <a href="#tool4">Tool 4</a>
-    <a href="#tool1"> Man city</a>
-    <a href="#tool2">Tool 2</a>
-    <a href="#tool3">Tool 3</a>
-    <a href="#tool4">Tool 4</a>
-    <a href="#tool1"> Man city</a>
-    <a href="#tool2">Tool 2</a>
-    <a href="#tool3">Tool 3</a>
-    <a href="#tool4">Tool 4</a>
+    <a href="https://github.com/yosintv2/livee/edit/main/chelsea"> Chelsea </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/manunited"> Man United </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/tottenham"> Tottenham </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/liverpool"> Liverpool </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/_____"> _____ </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/_____"> _____ </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/_____"> _____ </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/_____"> _____ </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/_____"> _____ </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/_____"> _____ </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/_____"> _____ </a>
   </div>
   
   
   
    <div class="links">
     <p>  Spanish La Liga </p>
-    <a href="#tool1"> Man city</a>
-    <a href="#tool2">Tool 2</a>
-    <a href="#tool3">Tool 3</a>
-    <a href="#tool4">Tool 4</a>
-    <a href="#tool1"> Man city</a>
-    <a href="#tool2">Tool 2</a>
-    <a href="#tool3">Tool 3</a>
-    <a href="#tool4">Tool 4</a>
-    <a href="#tool1"> Man city</a>
-    <a href="#tool2">Tool 2</a>
-    <a href="#tool3">Tool 3</a>
-    <a href="#tool4">Tool 4</a>
+    <a href="https://github.com/yosintv2/livee/edit/main/girona"> Girona </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/realmadrid"> Real Madrid </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/athletic"> Athletic </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/realbetis"> Real Betis </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/_____"> _____ </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/_____"> _____ </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/_____"> _____ </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/_____"> _____ </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/_____"> _____ </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/_____"> _____ </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/_____"> _____ </a>
   </div>
   
   
      <div class="links">
     <p>  Bundesliga </p>
-    <a href="#tool1"> Man city</a>
-    <a href="#tool2">Tool 2</a>
-    <a href="#tool3">Tool 3</a>
-    <a href="#tool4">Tool 4</a>
-    <a href="#tool1"> Man city</a>
-    <a href="#tool2">Tool 2</a>
-    <a href="#tool3">Tool 3</a>
-    <a href="#tool4">Tool 4</a>
-    <a href="#tool1"> Man city</a>
-    <a href="#tool2">Tool 2</a>
-    <a href="#tool3">Tool 3</a>
-    <a href="#tool4">Tool 4</a>
+    <a href="https://github.com/yosintv2/livee/edit/main/_____"> _____ </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/_____"> _____ </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/_____"> _____ </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/_____"> _____ </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/_____"> _____ </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/_____"> _____ </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/_____"> _____ </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/_____"> _____ </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/_____"> _____ </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/_____"> _____ </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/_____"> _____ </a>
   </div>
   
   
