--- a/edit.html
+++ b/edit.html
@@ -48,7 +48,23 @@
 
 <body>
 
+    <div class="links">
+    <p>  Cricket </p>
+    <a href="https://github.com/yosintv2/livee/edit/main/_____"> India </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/_____"> Australia </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/_____"> England </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/_____"> Sri Lanka </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/_____"> New Zealand </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/_____"> _____ </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/_____"> _____ </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/_____"> _____ </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/_____"> _____ </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/_____"> _____ </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/_____"> _____ </a>
+  </div>
 
+
+  
   <div class="links">
     <p> English Premier League</p>
     <a href="https://github.com/yosintv2/livee/edit/main/mancity"> Man city</a>
